Multi emu support